--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "srv",
   "version": "0.0.1",
-  "description": "Helps you run multiple instances of your service, provides graceful, zero downtime restart on signals and file changes, and handles errors. Does not require a seperate command line tool, nor does it daemonise your process, for better integration into other process monitors such as upstart.",
+  "description": "Helps you run multiple instances of your service, provides graceful, zero downtime restart on signals, and handles errors. Does not require a seperate command line tool, nor does it daemonise your process, for better integration into other process monitors such as upstart.",
   "author": {
     "name": "corruptmem",
     "email": "me@corruptmem.org",
